--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-4">
-                <h1 class="text-center border border-dark b-2 p-2 p-3 mb-2 bg-light text-dark">Crystal Collector!</h1>
+                <h1 class="text-center border border-dark b-2 p-1 mb-2 bg-light text-dark">Crystal Collector!</h1>
             </div>
         </div>
         <div class=" row justify-content-center">
-            <div class="col-sm-4 ">
-                <h3 class="text-center border border-dark b-2 p-2 p-3 mb-2 bg-light text-dark">Instructions for CCG</h3>
+            <div class="col-sm-3 ">
+                <h3 class="text-center border border-dark b-1 p-1 p-1 mb-1 bg-light text-dark">Instructions for CCG</h3>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -44,20 +44,20 @@
                     <div class="card border border-dark text-center">
                         <div class="card-body">
                             <h5 class="card-title">Target Num</h5>
-                            <p class="card-text" id="taget-num">0</p>
+                            <p class="card-text" id="target-num">0</p>
                         </div>
                     </div>
                     <div class="card border border-dark text-center">
                         <div class="card-body">
                             <h5 class="card-title">W's or L's</h5>
-                            <p class="card-text">Wins:<span id="Wins">0</span></p>
+                            <p class="card-text">Wins:<span id="wins">0</span></p>
                             <p class="card-text">Losses:<span id="losses">0</span></p>
                         </div>
                     </div>
                     <div class="card border border-dark text-center">
                         <div class="card-body">
                             <h5 class="card-title">Your Score</h5>
-                            <p class="card-text" id="your-score">0</p>
+                            <p class="card-text" id="user-score">0</p>
                         </div>
                     </div>
                 </div>
@@ -67,13 +67,13 @@
             <div class="col-sm-8 offset-2">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <button type="button" class="btn btn-secondary"><img class="image-thumbnail"
-                                src="assets/images/fluorite.jpg" alt="flourite"></button>
-                        <button type="button" class="btn btn-secondary"><img class="image-thumbnail"
+                        <button type="button" id="fluorite" class="btn btn-secondary"><img class="image-thumbnail"
+                                src="assets/images/fluorite.jpg" alt="fluorite"></button>
+                        <button type="button" id="labradorite" class="btn btn-secondary"><img class="image-thumbnail"
                                 src="assets/images/labradorite.jpg" alt="labradorite"></button>
-                        <button type="button" class="btn btn-secondary"><img class="image-thumbnail"
+                        <button type="button" id="opal" class="btn btn-secondary"><img class="image-thumbnail"
                                 src="assets/images/opal.jpg" alt="opal"></button>
-                        <button type="button" class="btn btn-secondary"><img class="images-thumbnail"
+                        <button type="button" id="ruby" class="btn btn-secondary"><img class="images-thumbnail"
                                 src="assets/images/ruby.jpg" alt="ruby"></button>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
     </div>
 
 
-    <script src="./javascript/game.js" async defer></script>
+    <script src="./javascript/game.js"></script>
 </body>
 
 </html>
